package beam.agentsim.agents.vehicles

/**
  * BEAM
  */
class LocationManager {


}
