@startuml
scale 900 height

' See this page for diagram conventions:
' http://plantuml.com/class-diagram

/'
NOTES:
A driver is a BeamAgent and does NOT need to be physically inside vehicle
passengers are BeamVehicles and are physically in vehicle and move with the vehicle
(e.g. a PersonAgent who is driving alone would be the driver of the vehicle and his/her
HumanBodyVehicle would be a passenger)
HumanBodyVehicle is a special case, it has no passengers, just a driver
Transit Vehicles will need a boardAlightDelayFunction
 '/

class BeamVehicle {
  carrier: Option[BeamVehicle]
  driver: Option[BeamAgent]
  passengers: List[VehicleAgent]
  capacity: Int
  length: Double
  locationManager: LocationManager
  powertrain: Powertrain
  location(time) -> match carrier { \n\tSome=>carrier.location\n\tNone=>locationManager.getLocation(time) )\n}
}

'Either make this an actor or remove and have trajectory under VehAgent
class LocationManager {
   location: Option[Trajectory]
}

class Trajectory {
   table: SomeIndexedTable<SpacetimeCoord>
   getLocation(time) -> table.interpolate(time)
   appendToTrajectory(List<SpacetimeCoord>)
}

class SpacetimeCoord {
    time: double
    coord: org.matsim.api.core.v01.Coord
}

Actor *-- BeamVehicle : extends
BeamVehicle *-- LocationManager : hasOne
LocationManager *-- Trajectory : mayHaveOne
Trajectory *-- SpacetimeCoord: hasMany


@enduml